[tool.poetry]
name = "apy-demo"
version = "0.1.0"
description = "A short demo that calculates APY for a single pair"
authors = ["Adamantios Zaras"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
requests = "^2.26.0"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
